@startuml
'https://plantuml.com/sequence-diagram

class ToDoListApplication
{
+void start(Stage primaryStage)
+void main(String[] args)
}

class Item
{
+public Item(String task, String completionDate, boolean finished)
+ public void setTask(String task)
+public void setCompletionDate(String completionDate)
+public void setFinished(boolean finished)

}

class checkInfo
{
+public boolean checkCompletionDate(String completionDate)
+ public boolean checkTask(String task)
}

class ListManagerController
{
+void start()
+void addTaskClicked(ActionEvent event)
+public void addItemToList(String task, String completionDate, boolean completed)
+public void addTaskAndDisplay(String task, String completionDate, boolean completed)
+public void createTask()
+void clearEntireListClicked(ActionEvent event)
+public void loadFile(File file) throws FileNotFoundException
+ void saveButtonClicked(ActionEvent event) throws FileNotFoundException
+void showCompletedTasksClicked(ActionEvent event)
+void showIncompleteTasksClicked(ActionEvent event)
}

TodoListApplication --> ListManagerController
ListManagerController <-- Item
ListManagerController -->checkInfo
Item --> checkInfo

@enduml
